add employee model with tests and documentattions.
