# db/schema.rb
@@ -10,17 +10,30 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2022_06_15_100008) do
+ActiveRecord::Schema[7.0].define(version: 2022_06_25_114804) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
+  create_table "employees", force: :cascade do |t|
+    t.string "name"
+    t.string "family_name"
+    t.date "birthday_date"
+    t.date "hiring_date"
+    t.string "photo_profile"
+    t.float "net_salary"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
   create_table "users", force: :cascade do |t|
-    t.string "Full_name"
     t.string "username"
     t.string "password"
     t.string "role"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.bigint "employee_id", null: false
+    t.index ["employee_id"], name: "index_users_on_employee_id"
   end
 
+  add_foreign_key "users", "employees"
 end
